--- a/index.html
+++ b/index.html
@@ -27,6 +27,297 @@
 </figure>
       </div>
       </div>
+      <aside class="notes">
+  <p>todo</p>
+
+</aside>
+      </section>
+      <section data-nimib-slide-number="3" >
+      <div style="display: grid; grid-auto-flow: column;">
+      <div>
+      <h2>1580</h2>
+      <h4>Rabbi</h4>
+      <h3>Golem</h3>
+      </div>
+      <div>
+      <figure>
+<img src="https://placehold.co/600x400" alt="">
+<figcaption></figcaption>
+</figure>
+      </div>
+      </div>
+      <aside class="notes">
+  <p>todo</p>
+
+</aside>
+      </section>
+      <section data-nimib-slide-number="4" >
+      <div style="display: grid; grid-auto-flow: column;">
+      <div>
+      <h2>1770</h2>
+      <h4>Van Kempelen</h4>
+      <h3>Mechanical Turk</h3>
+      </div>
+      <div>
+      <figure>
+<img src="https://placehold.co/600x400" alt="">
+<figcaption></figcaption>
+</figure>
+      </div>
+      </div>
+      <aside class="notes">
+  <p>todo</p>
+
+</aside>
+      </section>
+      <section data-nimib-slide-number="5" >
+      <div style="display: grid; grid-auto-flow: column;">
+      <div>
+      <h2>1676</h2>
+      <h4>Leibniz</h4>
+      <h3>Chain Rule</h3>
+      </div>
+      <div>
+      <figure>
+<img src="https://placehold.co/600x400" alt="">
+<figcaption></figcaption>
+</figure>
+      </div>
+      </div>
+      <aside class="notes">
+  <p>(and Alphabet of Human Thought)</p>
+
+</aside>
+      </section>
+      <section data-nimib-slide-number="6" >
+      <div style="display: grid; grid-auto-flow: column;">
+      <div>
+      <h2>1854</h2>
+      <h4>George Boole</h4>
+      <h3>Symbolic Language</h3>
+      </div>
+      <div>
+      <figure>
+<img src="https://placehold.co/600x400" alt="">
+<figcaption></figcaption>
+</figure>
+      </div>
+      </div>
+      <aside class="notes">
+  <p>investigate the fundamental laws of those operations of the mind by which reasoning is performed,
+to give expression to them in the symbolic language of a calculus</p>
+
+</aside>
+      </section>
+      <section data-nimib-slide-number="7" >
+      <div style="display: grid; grid-auto-flow: column;">
+      <div>
+      <h2>1843</h2>
+      <h4>Ada Lovelace</h4>
+      <h3>Notes on Analytical Engine</h3>
+      </div>
+      <div>
+      <figure>
+<img src="https://placehold.co/600x400" alt="">
+<figcaption></figcaption>
+</figure>
+      </div>
+      </div>
+      <aside class="notes">
+  <p>todo</p>
+
+</aside>
+      </section>
+      <section data-nimib-slide-number="8" >
+      <div style="display: grid; grid-auto-flow: column;">
+      <div>
+      <h2>1943</h2>
+      <h4>McCulloch and Pitts</h4>
+      <h3>Neuron</h3>
+      </div>
+      <div>
+      <figure>
+<img src="https://placehold.co/600x400" alt="">
+<figcaption></figcaption>
+</figure>
+      </div>
+      </div>
+      <aside class="notes">
+  <p>todo</p>
+
+</aside>
+      </section>
+      <section data-nimib-slide-number="9" >
+      <div style="display: grid; grid-auto-flow: column;">
+      <div>
+      <h2>1945</h2>
+      <h4>Vannevar Bush</h4>
+      <h3>As We May Think</h3>
+      </div>
+      <div>
+      <figure>
+<img src="https://placehold.co/600x400" alt="">
+<figcaption></figcaption>
+</figure>
+      </div>
+      </div>
+      <aside class="notes">
+  <p>todo</p>
+
+</aside>
+      </section>
+      <section data-nimib-slide-number="10" >
+      <div style="display: grid; grid-auto-flow: column;">
+      <div>
+      <h2>1950</h2>
+      <h4>Alan Turing</h4>
+      <h3>Imitation Game</h3>
+      </div>
+      <div>
+      <figure>
+<img src="https://placehold.co/600x400" alt="">
+<figcaption></figcaption>
+</figure>
+      </div>
+      </div>
+      <aside class="notes">
+  <p>todo</p>
+
+</aside>
+      </section>
+      <section data-nimib-slide-number="11" >
+      <div style="display: grid; grid-auto-flow: column;">
+      <div>
+      <h2>1956</h2>
+      <h4>Dartmouth</h4>
+      <h3>Artifical Intelligence</h3>
+      </div>
+      <div>
+      <figure>
+<img src="https://placehold.co/600x400" alt="">
+<figcaption></figcaption>
+</figure>
+      </div>
+      </div>
+      <aside class="notes">
+  <p>todo - add a definition I like of AI:
+stuff that I do not yet understand</p>
+
+</aside>
+      </section>
+      <section data-nimib-slide-number="12" >
+      <div style="display: grid; grid-auto-flow: column;">
+      <div>
+      <h2>1961</h2>
+      <h4>Donald Michie</h4>
+      <h3>MENACE</h3>
+      </div>
+      <div>
+      <figure>
+<img src="https://placehold.co/600x400" alt="">
+<figcaption></figcaption>
+</figure>
+      </div>
+      </div>
+      <aside class="notes">
+  <p>todo</p>
+
+</aside>
+      </section>
+      <section data-nimib-slide-number="13" >
+      <div style="display: grid; grid-auto-flow: column;">
+      <div>
+      <h2>1965</h2>
+      <h4>Weizenbaum</h4>
+      <h3>ELIZA</h3>
+      </div>
+      <div>
+      <figure>
+<img src="https://placehold.co/600x400" alt="">
+<figcaption></figcaption>
+</figure>
+      </div>
+      </div>
+      <aside class="notes">
+  <p>todo</p>
+
+</aside>
+      </section>
+      <section data-nimib-slide-number="14" >
+      <div style="display: grid; grid-auto-flow: column;">
+      <div>
+      <h2>1969</h2>
+      <h4>Minsky &amp; Papert</h4>
+      <h3>Perceptrons</h3>
+      </div>
+      <div>
+      <figure>
+<img src="https://placehold.co/600x400" alt="">
+<figcaption></figcaption>
+</figure>
+      </div>
+      </div>
+      <aside class="notes">
+  <p>todo</p>
+
+</aside>
+      </section>
+      <section data-nimib-slide-number="15" >
+      <div style="display: grid; grid-auto-flow: column;">
+      <div>
+      <h2>1979</h2>
+      <h4>Hans Moravec</h4>
+      <h3>Stanford Cart</h3>
+      </div>
+      <div>
+      <figure>
+<img src="https://placehold.co/600x400" alt="">
+<figcaption></figcaption>
+</figure>
+      </div>
+      </div>
+      <aside class="notes">
+  <p>todo</p>
+
+</aside>
+      </section>
+      <section data-nimib-slide-number="16" >
+      <div style="display: grid; grid-auto-flow: column;">
+      <div>
+      <h2>1996</h2>
+      <h4>X et al</h4>
+      <h3>Mistral</h3>
+      </div>
+      <div>
+      <figure>
+<img src="https://placehold.co/600x400" alt="">
+<figcaption></figcaption>
+</figure>
+      </div>
+      </div>
+      <aside class="notes">
+  <p>todo</p>
+
+</aside>
+      </section>
+      <section data-nimib-slide-number="17" >
+      <div style="display: grid; grid-auto-flow: column;">
+      <div>
+      <h2>2012</h2>
+      <h4>X Ilya Hinton</h4>
+      <h3>AlexNet</h3>
+      </div>
+      <div>
+      <figure>
+<img src="https://placehold.co/600x400" alt="">
+<figcaption></figcaption>
+</figure>
+      </div>
+      </div>
+      <aside class="notes">
+  <p>todo</p>
+
+</aside>
       </section>
     </div>
   </div>
