Title Hero Golem Turk

--- a/index.html
+++ b/index.html
@@ -12,23 +12,42 @@
       <section data-nimib-slide-number="1" >
       <h2>AI: a blast from the past</h2>
       <h4>An opinionated and condensed history</h4>
+      <aside class="notes">
+  <p>I have 5 minutes and I though I could fit a short history of AI
+since AI really started with ChatGPT less than 16 months ago.
+I actually found out that there is more to it, so here is a very compressed history of AI.
+... and compression fits very well with AI, after all it ChatGPT is just a big zip file, right?</p>
+
+</aside>
       </section>
       <section data-nimib-slide-number="2" >
       <div style="display: grid; grid-auto-flow: column;">
       <div>
       <h2>60 AD</h2>
-      <h4>Heron of Alexandria</h4>
-      <h3>theatre</h3>
+      <h4>Hero of Alexandria</h4>
+      <h3>An Automatic Theatre</h3>
       </div>
       <div>
       <figure>
-<img src="https://placehold.co/600x400" alt="">
+<img src="https://upload.wikimedia.org/wikipedia/commons/2/2e/Hero_of_Alexandria.png" alt="">
 <figcaption></figcaption>
 </figure>
       </div>
       </div>
       <aside class="notes">
-  <p>todo</p>
+  <p>In Anno Domini 60 Hero of Alexandria created what might have been
+&quot;the world's first practical programmable machine
+an automatic theatre.&quot;</p>
+<p>I find fascinating that the first  historical record of AI</p>
+<ul>
+<li>
+<p>according to Schmidhuber, and who I am to contradict the guy -
+is about a form of art that stubbornly refuses to die</p>
+</li>
+<li>
+<p>but AI seems to be coming for all artists after all</p>
+</li>
+</ul>
 
 </aside>
       </section>
@@ -36,18 +55,21 @@
       <div style="display: grid; grid-auto-flow: column;">
       <div>
       <h2>1580</h2>
-      <h4>Rabbi</h4>
+      <h4>Rabbi Judah Loew ben Bezalel</h4>
       <h3>Golem</h3>
       </div>
       <div>
       <figure>
-<img src="https://placehold.co/600x400" alt="">
+<img src="https://www.researchgate.net/profile/Amir-Vudka/publication/357910123/figure/fig2/AS:1113612311629827@1642517273373/Der-Golem-Paul-Wegener-1920.png" alt="">
 <figcaption></figcaption>
 </figure>
       </div>
       </div>
       <aside class="notes">
-  <p>todo</p>
+  <p>Around 1580, Rabbi Judah Loew ben Bezalel of Prague creates the Golem.
+Animated by truth, but lacking free will, a golem always does exactly what is told.
+The Golem is incredibly powerful but its obedience also brings danger
+(and I think it is not time yet to retire this foundational myth of AI and science fiction)</p>
 
 </aside>
       </section>
@@ -60,13 +82,15 @@
       </div>
       <div>
       <figure>
-<img src="https://placehold.co/600x400" alt="">
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6e/Racknitz_-_The_Turk_3.jpg/1920px-Racknitz_-_The_Turk_3.jpg" alt="">
 <figcaption></figcaption>
 </figure>
       </div>
       </div>
       <aside class="notes">
-  <p>todo</p>
+  <p>In 1770 Wolfgang Von Kempelen built the Mechanical Turk
+a chess-playing machine that was revealed only 80 years later to be a hoax.
+I guess there is a lesson against closed source AI hidden somewhere inside the Mechanical Turk.</p>
 
 </aside>
       </section>
@@ -190,7 +214,7 @@ to give expression to them in the symbolic language of a calculus</p>
       <div>
       <h2>1956</h2>
       <h4>Dartmouth</h4>
-      <h3>Artifical Intelligence</h3>
+      <h3>&quot;Artificial Intelligence&quot;</h3>
       </div>
       <div>
       <figure>
