--- a/index.html
+++ b/index.html
@@ -10,226 +10,6 @@
   <div class="reveal">
     <div class="slides">
       <section data-nimib-slide-number="1" >
-      <h2>AI: a blast from the past</h2>
-      <h4>An opinionated and condensed history</h4>
-      <aside class="notes">
-  <p>I have 5 minutes and I though I could fit a short history of AI
-since AI really started with ChatGPT less than 16 months ago.
-I actually found out that there is more to it, so here is a very compressed history of AI.
-... and compression fits very well with AI, after all it ChatGPT is just a big zip file, right?</p>
-
-</aside>
-      </section>
-      <section data-nimib-slide-number="2" >
-      <div style="display: grid; grid-auto-flow: column;">
-      <div>
-      <h2>60 AD</h2>
-      <h4>Hero of Alexandria</h4>
-      <h3>An Automatic Theatre</h3>
-      </div>
-      <div>
-      <figure>
-<img src="https://upload.wikimedia.org/wikipedia/commons/2/2e/Hero_of_Alexandria.png" alt="">
-<figcaption></figcaption>
-</figure>
-      </div>
-      </div>
-      <aside class="notes">
-  <p>In Anno Domini 60 Hero of Alexandria created what might have been
-&quot;the world's first practical programmable machine
-an automatic theatre.&quot;</p>
-<p>I find fascinating that the first  historical record of AI</p>
-<ul>
-<li>
-<p>according to Schmidhuber, and who I am to contradict the guy -
-is about a form of art that stubbornly refuses to die</p>
-</li>
-<li>
-<p>but AI seems to be coming for all artists after all</p>
-</li>
-</ul>
-
-</aside>
-      </section>
-      <section data-nimib-slide-number="3" >
-      <div style="display: grid; grid-auto-flow: column;">
-      <div>
-      <h2>1580</h2>
-      <h4>Rabbi Judah Loew ben Bezalel</h4>
-      <h3>Golem</h3>
-      </div>
-      <div>
-      <figure>
-<img src="https://www.researchgate.net/profile/Amir-Vudka/publication/357910123/figure/fig2/AS:1113612311629827@1642517273373/Der-Golem-Paul-Wegener-1920.png" alt="">
-<figcaption></figcaption>
-</figure>
-      </div>
-      </div>
-      <aside class="notes">
-  <p>Around 1580, Rabbi Judah Loew ben Bezalel of Prague creates the Golem.
-Animated by truth, but lacking free will, a golem always does exactly what is told.
-The Golem is incredibly powerful but its obedience also brings danger
-(and I think it is not time yet to retire this foundational myth of AI and science fiction)</p>
-
-</aside>
-      </section>
-      <section data-nimib-slide-number="4" >
-      <div style="display: grid; grid-auto-flow: column;">
-      <div>
-      <h2>1770</h2>
-      <h4>Van Kempelen</h4>
-      <h3>Mechanical Turk</h3>
-      </div>
-      <div>
-      <figure>
-<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6e/Racknitz_-_The_Turk_3.jpg/1920px-Racknitz_-_The_Turk_3.jpg" alt="">
-<figcaption></figcaption>
-</figure>
-      </div>
-      </div>
-      <aside class="notes">
-  <p>In 1770 Wolfgang Von Kempelen built the Mechanical Turk
-a chess-playing machine that was revealed only 80 years later to be a hoax.
-I guess there is a lesson against closed source AI hidden somewhere inside the Mechanical Turk.</p>
-
-</aside>
-      </section>
-      <section data-nimib-slide-number="5" >
-      <div style="display: grid; grid-auto-flow: column;">
-      <div>
-      <h2>1676</h2>
-      <h4>Leibniz</h4>
-      <h3>Chain Rule</h3>
-      </div>
-      <div>
-      <figure>
-<img src="https://placehold.co/600x400" alt="">
-<figcaption></figcaption>
-</figure>
-      </div>
-      </div>
-      <aside class="notes">
-  <p>(and Alphabet of Human Thought)</p>
-
-</aside>
-      </section>
-      <section data-nimib-slide-number="6" >
-      <div style="display: grid; grid-auto-flow: column;">
-      <div>
-      <h2>1854</h2>
-      <h4>George Boole</h4>
-      <h3>Symbolic Language</h3>
-      </div>
-      <div>
-      <figure>
-<img src="https://placehold.co/600x400" alt="">
-<figcaption></figcaption>
-</figure>
-      </div>
-      </div>
-      <aside class="notes">
-  <p>investigate the fundamental laws of those operations of the mind by which reasoning is performed,
-to give expression to them in the symbolic language of a calculus</p>
-
-</aside>
-      </section>
-      <section data-nimib-slide-number="7" >
-      <div style="display: grid; grid-auto-flow: column;">
-      <div>
-      <h2>1843</h2>
-      <h4>Ada Lovelace</h4>
-      <h3>Notes on Analytical Engine</h3>
-      </div>
-      <div>
-      <figure>
-<img src="https://placehold.co/600x400" alt="">
-<figcaption></figcaption>
-</figure>
-      </div>
-      </div>
-      <aside class="notes">
-  <p>todo</p>
-
-</aside>
-      </section>
-      <section data-nimib-slide-number="8" >
-      <div style="display: grid; grid-auto-flow: column;">
-      <div>
-      <h2>1943</h2>
-      <h4>McCulloch and Pitts</h4>
-      <h3>Neuron</h3>
-      </div>
-      <div>
-      <figure>
-<img src="https://placehold.co/600x400" alt="">
-<figcaption></figcaption>
-</figure>
-      </div>
-      </div>
-      <aside class="notes">
-  <p>todo</p>
-
-</aside>
-      </section>
-      <section data-nimib-slide-number="9" >
-      <div style="display: grid; grid-auto-flow: column;">
-      <div>
-      <h2>1945</h2>
-      <h4>Vannevar Bush</h4>
-      <h3>As We May Think</h3>
-      </div>
-      <div>
-      <figure>
-<img src="https://placehold.co/600x400" alt="">
-<figcaption></figcaption>
-</figure>
-      </div>
-      </div>
-      <aside class="notes">
-  <p>todo</p>
-
-</aside>
-      </section>
-      <section data-nimib-slide-number="10" >
-      <div style="display: grid; grid-auto-flow: column;">
-      <div>
-      <h2>1950</h2>
-      <h4>Alan Turing</h4>
-      <h3>Imitation Game</h3>
-      </div>
-      <div>
-      <figure>
-<img src="https://placehold.co/600x400" alt="">
-<figcaption></figcaption>
-</figure>
-      </div>
-      </div>
-      <aside class="notes">
-  <p>todo</p>
-
-</aside>
-      </section>
-      <section data-nimib-slide-number="11" >
-      <div style="display: grid; grid-auto-flow: column;">
-      <div>
-      <h2>1956</h2>
-      <h4>Dartmouth</h4>
-      <h3>&quot;Artificial Intelligence&quot;</h3>
-      </div>
-      <div>
-      <figure>
-<img src="https://placehold.co/600x400" alt="">
-<figcaption></figcaption>
-</figure>
-      </div>
-      </div>
-      <aside class="notes">
-  <p>todo - add a definition I like of AI:
-stuff that I do not yet understand</p>
-
-</aside>
-      </section>
-      <section data-nimib-slide-number="12" >
       <div style="display: grid; grid-auto-flow: column;">
       <div>
       <h2>1961</h2>
@@ -238,17 +18,22 @@ stuff that I do not yet understand</p>
       </div>
       <div>
       <figure>
-<img src="https://placehold.co/600x400" alt="">
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/da/Mscroggs-MENACE-cropped.jpg/700px-Mscroggs-MENACE-cropped.jpg" alt="">
 <figcaption></figcaption>
 </figure>
       </div>
       </div>
       <aside class="notes">
-  <p>todo</p>
+  <p>In 1961 Donald Michie designed and built &quot;Matchbox Educable Noughts and Crosses Engine&quot;
+a mechanical computer made of 304 matchboxes that can learn how to play Tic-Tac-Toe.</p>
+<p>Roughly 40 years later I read about MENACE in a crossword weekly magazine
+and it is still the best imagine I have in my mind of what
+Reinforcement Learning is about.</p>
+<p>Look it up, it is worth it!</p>
 
 </aside>
       </section>
-      <section data-nimib-slide-number="13" >
+      <section data-nimib-slide-number="2" >
       <div style="display: grid; grid-auto-flow: column;">
       <div>
       <h2>1965</h2>
@@ -267,7 +52,7 @@ stuff that I do not yet understand</p>
 
 </aside>
       </section>
-      <section data-nimib-slide-number="14" >
+      <section data-nimib-slide-number="3" >
       <div style="display: grid; grid-auto-flow: column;">
       <div>
       <h2>1969</h2>
@@ -286,7 +71,7 @@ stuff that I do not yet understand</p>
 
 </aside>
       </section>
-      <section data-nimib-slide-number="15" >
+      <section data-nimib-slide-number="4" >
       <div style="display: grid; grid-auto-flow: column;">
       <div>
       <h2>1979</h2>
@@ -305,7 +90,7 @@ stuff that I do not yet understand</p>
 
 </aside>
       </section>
-      <section data-nimib-slide-number="16" >
+      <section data-nimib-slide-number="5" >
       <div style="display: grid; grid-auto-flow: column;">
       <div>
       <h2>1996</h2>
@@ -324,7 +109,7 @@ stuff that I do not yet understand</p>
 
 </aside>
       </section>
-      <section data-nimib-slide-number="17" >
+      <section data-nimib-slide-number="6" >
       <div style="display: grid; grid-auto-flow: column;">
       <div>
       <h2>2012</h2>
