--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <p>In 1961 Donald Michie designed and built &quot;Matchbox Educable Noughts and Crosses Engine&quot;
 a mechanical computer made of 304 matchboxes that can learn how to play Tic-Tac-Toe.</p>
 <p>Roughly 40 years later I read about MENACE in a crossword weekly magazine
-and it is still the best imagine I have in my mind of what
+and it is still the best imagine I have incomey mind of what
 Reinforcement Learning is about.</p>
 <p>Look it up, it is worth it!</p>
 
@@ -36,19 +36,28 @@ Reinforcement Learning is about.</p>
       <section data-nimib-slide-number="2" >
       <div style="display: grid; grid-auto-flow: column;">
       <div>
-      <h2>1965</h2>
+      <h2>1966</h2>
       <h4>Weizenbaum</h4>
       <h3>ELIZA</h3>
       </div>
       <div>
       <figure>
-<img src="https://placehold.co/600x400" alt="">
+<img src="https://upload.wikimedia.org/wikipedia/commons/7/79/ELIZA_conversation.png" alt="">
 <figcaption></figcaption>
 </figure>
       </div>
       </div>
       <aside class="notes">
-  <p>todo</p>
+  <p>Around 1966 Joseph Weizenbaum develop what we would now called a chatbot
+that was able to simulate a a psychotherapist of the Rogerian school.
+The technology used is mainly pattern matching using regular expressions.</p>
+<p>Weizenbaum said at the time: &quot;What I had not realized is that extremely short exposures
+to a relatively simple computer program could induce powerful delusional thinking
+in quite normal people&quot;.</p>
+<p>Later he would become strongly worried about social impacts of AI
+saying that the computer, at its most base level,
+is a fundamentally conservative force and that despite being a technological innovation,
+it ends up hindering social progress.</p>
 
 </aside>
       </section>
