--- a/index.html
+++ b/index.html
@@ -12,6 +12,32 @@
       <section data-nimib-slide-number="1" >
       <div style="display: grid; grid-auto-flow: column;">
       <div>
+      <h2>1843</h2>
+      <h4>Ada Lovelace</h4>
+      <h3>Notes on Analytical Engine</h3>
+      </div>
+      <div>
+      <figure>
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/ba/Ada_Lovelace_in_1852.jpg/440px-Ada_Lovelace_in_1852.jpg" alt="">
+<figcaption></figcaption>
+</figure>
+      </div>
+      </div>
+      <aside class="notes">
+  <p>In 1843 Ada Lovelace added an extensive set of notes to a translation of
+Luigi Menabrea's article on Babbage's newest proposed machine called Analytical Engine.</p>
+<p>Besides containing the first published program in history
+(for a machine that would never be built) it also contains the following remark,
+known as a 'dismissal'of AI:
+&quot;The Analytical Engine has no pretensions whatever to originate anything.
+It can do whatever we know how to order it to perform.
+It can follow analysis; but it has no power of anticipating any analytical relations or truths&quot;</p>
+
+</aside>
+      </section>
+      <section data-nimib-slide-number="2" >
+      <div style="display: grid; grid-auto-flow: column;">
+      <div>
       <h2>1961</h2>
       <h4>Donald Michie</h4>
       <h3>MENACE</h3>
@@ -26,18 +52,18 @@
       <aside class="notes">
   <p>In 1961 Donald Michie designed and built &quot;Matchbox Educable Noughts and Crosses Engine&quot;
 a mechanical computer made of 304 matchboxes that can learn how to play Tic-Tac-Toe.</p>
-<p>Roughly 40 years later I read about MENACE in a crossword weekly magazine
-and it is still the best imagine I have incomey mind of what
+<p>Roughly 40 years later I read about MENACE in a Italian crossword weekly magazine
+and it is still the best imagine I have in my mind of what
 Reinforcement Learning is about.</p>
 <p>Look it up, it is worth it!</p>
 
 </aside>
       </section>
-      <section data-nimib-slide-number="2" >
+      <section data-nimib-slide-number="3" >
       <div style="display: grid; grid-auto-flow: column;">
       <div>
       <h2>1966</h2>
-      <h4>Weizenbaum</h4>
+      <h4>Joseph Weizenbaum</h4>
       <h3>ELIZA</h3>
       </div>
       <div>
@@ -61,7 +87,7 @@ it ends up hindering social progress.</p>
 
 </aside>
       </section>
-      <section data-nimib-slide-number="3" >
+      <section data-nimib-slide-number="4" >
       <div style="display: grid; grid-auto-flow: column;">
       <div>
       <h2>1969</h2>
@@ -80,7 +106,7 @@ it ends up hindering social progress.</p>
 
 </aside>
       </section>
-      <section data-nimib-slide-number="4" >
+      <section data-nimib-slide-number="5" >
       <div style="display: grid; grid-auto-flow: column;">
       <div>
       <h2>1979</h2>
@@ -89,17 +115,26 @@ it ends up hindering social progress.</p>
       </div>
       <div>
       <figure>
-<img src="https://placehold.co/600x400" alt="">
+<img src="https://web.stanford.edu/~learnest/sail/oldcart.fld/image006.png" alt="">
 <figcaption></figcaption>
 </figure>
       </div>
       </div>
       <aside class="notes">
-  <p>todo</p>
+  <p>In 1979 Hans Moravec during his PhD thesis was able to make the Stanford Cart move
+automously around obstacles in a controlled environment.
+The vehicle crossed a chair-filled room without human intervention in about five hours.</p>
+<p>Nowadays the so called Moravec Paradox is still used to explain why we do not
+yet have autonomous driving, despite all the promises that a prominent social media owner can make.</p>
+<p>In the words of Moravec the paradox lies in the fact that:
+&quot;it is comparatively easy to make computers exhibit
+adult level performance on intelligence tests or playing checkers,
+and difficult or impossible to give them the skills of a one-year-old
+when it comes to perception and mobility&quot;</p>
 
 </aside>
       </section>
-      <section data-nimib-slide-number="5" >
+      <section data-nimib-slide-number="6" >
       <div style="display: grid; grid-auto-flow: column;">
       <div>
       <h2>1996</h2>
@@ -118,7 +153,7 @@ it ends up hindering social progress.</p>
 
 </aside>
       </section>
-      <section data-nimib-slide-number="6" >
+      <section data-nimib-slide-number="7" >
       <div style="display: grid; grid-auto-flow: column;">
       <div>
       <h2>2012</h2>
