--- a/index.html
+++ b/index.html
@@ -10,6 +10,98 @@
   <div class="reveal">
     <div class="slides">
       <section data-nimib-slide-number="1" >
+      <h2>AI: a blast from the past</h2>
+      <h4>selected milestones from AI history</h4>
+      <p><a href="py4ai.com">py4ai.com</a></p>
+      <aside class="notes">
+  <p>This is a lightning talk for the conference Py4AI
+that is finally happening this Saturday
+and that I have spent quite a bunch of time
+organizing during my past batch.
+Also inspired by Ariel on punchcards from a few weeks ago.</p>
+<p>Not finished.</p>
+<p>I have 5 minutes and I though I could fit a short history of AI
+since AI really started with ChatGPT less than 16 months ago.
+I actually found out that there is more to it, so here is a very compressed history of AI.
+... and compression fits very well with AI, after all ChatGPT is just a big zip file, right?</p>
+
+</aside>
+      </section>
+      <section data-nimib-slide-number="2" >
+      <div style="display: grid; grid-auto-flow: column;">
+      <div>
+      <h2>60 AD</h2>
+      <h4>Hero of Alexandria</h4>
+      <h3>An Automatic Theatre</h3>
+      </div>
+      <div>
+      <figure>
+<img src="https://upload.wikimedia.org/wikipedia/commons/2/2e/Hero_of_Alexandria.png" alt="">
+<figcaption></figcaption>
+</figure>
+      </div>
+      </div>
+      <aside class="notes">
+  <p>In Anno Domini 60 Hero of Alexandria created what might have been
+&quot;the world's first practical programmable machine
+an automatic theatre.&quot;</p>
+<p>I find fascinating that the first  historical record of AI</p>
+<ul>
+<li>
+<p>according to Schmidhuber, and who I am to contradict the guy -
+is about a form of art that stubbornly refuses to die</p>
+</li>
+<li>
+<p>but AI seems to be coming for all artists after all</p>
+</li>
+</ul>
+
+</aside>
+      </section>
+      <section data-nimib-slide-number="3" >
+      <div style="display: grid; grid-auto-flow: column;">
+      <div>
+      <h2>1580</h2>
+      <h4>Rabbi Judah Loew ben Bezalel</h4>
+      <h3>Golem</h3>
+      </div>
+      <div>
+      <figure>
+<img src="https://www.researchgate.net/profile/Amir-Vudka/publication/357910123/figure/fig2/AS:1113612311629827@1642517273373/Der-Golem-Paul-Wegener-1920.png" alt="">
+<figcaption></figcaption>
+</figure>
+      </div>
+      </div>
+      <aside class="notes">
+  <p>Around 1580, Rabbi Judah Loew ben Bezalel of Prague creates the Golem.
+Animated by truth, but lacking free will, a golem always does exactly what is told.
+The Golem is incredibly powerful but its obedience also brings danger
+(and I think it is not time yet to retire this foundational myth of AI and science fiction)</p>
+
+</aside>
+      </section>
+      <section data-nimib-slide-number="4" >
+      <div style="display: grid; grid-auto-flow: column;">
+      <div>
+      <h2>1770</h2>
+      <h4>Van Kempelen</h4>
+      <h3>Mechanical Turk</h3>
+      </div>
+      <div>
+      <figure>
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6e/Racknitz_-_The_Turk_3.jpg/1920px-Racknitz_-_The_Turk_3.jpg" alt="">
+<figcaption></figcaption>
+</figure>
+      </div>
+      </div>
+      <aside class="notes">
+  <p>In 1770 Wolfgang Von Kempelen built the Mechanical Turk
+a chess-playing machine that was revealed only 80 years later to be a hoax.
+I guess there is a lesson against closed source AI hidden somewhere inside the Mechanical Turk.</p>
+
+</aside>
+      </section>
+      <section data-nimib-slide-number="5" >
       <div style="display: grid; grid-auto-flow: column;">
       <div>
       <h2>1843</h2>
@@ -35,7 +127,7 @@ It can follow analysis; but it has no power of anticipating any analytical relat
 
 </aside>
       </section>
-      <section data-nimib-slide-number="2" >
+      <section data-nimib-slide-number="6" >
       <div style="display: grid; grid-auto-flow: column;">
       <div>
       <h2>1961</h2>
@@ -59,7 +151,7 @@ Reinforcement Learning is about.</p>
 
 </aside>
       </section>
-      <section data-nimib-slide-number="3" >
+      <section data-nimib-slide-number="7" >
       <div style="display: grid; grid-auto-flow: column;">
       <div>
       <h2>1966</h2>
@@ -87,26 +179,7 @@ it ends up hindering social progress.</p>
 
 </aside>
       </section>
-      <section data-nimib-slide-number="4" >
-      <div style="display: grid; grid-auto-flow: column;">
-      <div>
-      <h2>1969</h2>
-      <h4>Minsky &amp; Papert</h4>
-      <h3>Perceptrons</h3>
-      </div>
-      <div>
-      <figure>
-<img src="https://placehold.co/600x400" alt="">
-<figcaption></figcaption>
-</figure>
-      </div>
-      </div>
-      <aside class="notes">
-  <p>todo</p>
-
-</aside>
-      </section>
-      <section data-nimib-slide-number="5" >
+      <section data-nimib-slide-number="8" >
       <div style="display: grid; grid-auto-flow: column;">
       <div>
       <h2>1979</h2>
@@ -131,44 +204,6 @@ yet have autonomous driving, despite all the promises that a prominent social me
 adult level performance on intelligence tests or playing checkers,
 and difficult or impossible to give them the skills of a one-year-old
 when it comes to perception and mobility&quot;</p>
-
-</aside>
-      </section>
-      <section data-nimib-slide-number="6" >
-      <div style="display: grid; grid-auto-flow: column;">
-      <div>
-      <h2>1996</h2>
-      <h4>X et al</h4>
-      <h3>Mistral</h3>
-      </div>
-      <div>
-      <figure>
-<img src="https://placehold.co/600x400" alt="">
-<figcaption></figcaption>
-</figure>
-      </div>
-      </div>
-      <aside class="notes">
-  <p>todo</p>
-
-</aside>
-      </section>
-      <section data-nimib-slide-number="7" >
-      <div style="display: grid; grid-auto-flow: column;">
-      <div>
-      <h2>2012</h2>
-      <h4>X Ilya Hinton</h4>
-      <h3>AlexNet</h3>
-      </div>
-      <div>
-      <figure>
-<img src="https://placehold.co/600x400" alt="">
-<figcaption></figcaption>
-</figure>
-      </div>
-      </div>
-      <aside class="notes">
-  <p>todo</p>
 
 </aside>
       </section>
